--- a/model/image_classification.ipynb
+++ b/model/image_classification.ipynb
@@ -393,19 +393,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "5a7ce285-2f3e-45a4-9e2f-29f959a9b2a0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\resize.cpp:4152: error: (-215:Assertion failed) !ssize.empty() in function 'cv::resize'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m files:\n\u001b[0;32m      4\u001b[0m     img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(file)\n\u001b[1;32m----> 5\u001b[0m     scaled_raw_img \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     img_har \u001b[38;5;241m=\u001b[39m w2d(img, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdb1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m      7\u001b[0m     scalled_har_img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(img_har, (\u001b[38;5;241m32\u001b[39m,\u001b[38;5;241m32\u001b[39m))\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\resize.cpp:4152: error: (-215:Assertion failed) !ssize.empty() in function 'cv::resize'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4096 4096\n"
      ]
     }
    ],
@@ -413,15 +409,79 @@
     "X, y = [],[]\n",
     "for celeb_name, files in celeb_faces.items():\n",
     "    for file in files:\n",
-    "        img = cv2.imread(file)\n",
+    "        img = cv2.imread(cropped_folder+\"/\"+celeb_name+\"/\"+file)\n",
     "        scaled_raw_img = cv2.resize(img, (32,32))\n",
     "        img_har = w2d(img, 'db1', 5)\n",
     "        scalled_har_img = cv2.resize(img_har, (32,32))\n",
     "        combined_img = np.vstack((scaled_raw_img.reshape(32*32*3,1), scalled_har_img.reshape(32*32,1)))\n",
     "        X.append(combined_img)\n",
-    "        y.append(celeb_name)\n",
+    "        y.append(class_dict[celeb_name])\n",
+    "print(len(X[0]), 32*32*3+32*32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "934e4b81-d354-4e7b-8280-8856fb1ca34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100],\n",
+       "       [129],\n",
+       "       [140],\n",
+       "       ...,\n",
+       "       [237],\n",
+       "       [234],\n",
+       "       [232]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "X[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b8b7f4ee-6a1f-471b-84fa-bf65b4fb2860",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "613190b6-30a6-4a9b-8e30-a92f425a490e",
+   "metadata": {},
+   "source": [
+    "# training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "089e7e18-9a57-45b9-baeb-94f7aa47eed2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
