model gridsearch cv

--- a/model/image_classification.ipynb
+++ b/model/image_classification.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1faa008cd90>"
+       "<matplotlib.image.AxesImage at 0x141f11be250>"
       ]
      },
      "execution_count": 3,
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1faa0134490>"
+       "<matplotlib.image.AxesImage at 0x141f43a0050>"
       ]
      },
      "execution_count": 4,
@@ -117,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "61278be4-de74-4ca8-9c82-3be94617f758",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1faa01c2850>"
+       "<matplotlib.image.AxesImage at 0x141fe646950>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "c30a3492-8fb0-40c4-bb76-5b65e0504e99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1fab3298e90>"
+       "<matplotlib.image.AxesImage at 0x141fe900050>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "ab3a684e-655d-448f-849a-73f19ff73059",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "  'virat_kohli9.png']}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "ed012f53-dae8-477b-a2ed-48eabde61b49",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "{'lionel_messi': 0, 'roger_federer': 1, 'ronaldo': 2, 'virat_kohli': 3}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "5a7ce285-2f3e-45a4-9e2f-29f959a9b2a0",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "934e4b81-d354-4e7b-8280-8856fb1ca34c",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "       [232]], dtype=uint8)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "b8b7f4ee-6a1f-471b-84fa-bf65b4fb2860",
    "metadata": {},
    "outputs": [
@@ -458,13 +458,35 @@
        "0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3e96ba65-16dd-45d8-8568-0d0866413129",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(120, 4096)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array(X).reshape(len(X),4096).astype(float)\n",
+    "X.shape"
    ]
   },
   {
@@ -477,11 +499,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "d5735454-a16e-4c5b-9cd0-5ec5d18d5d74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "19b950a4-1355-43e1-af8f-9c17c952b45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8333333333333334"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.1, random_state=0)\n",
+    "pipe = Pipeline([(\"scaler\", StandardScaler()), (\"svc\", SVC(kernel=\"rbf\", C=10))])\n",
+    "pipe.fit(X_train, y_train)\n",
+    "pipe.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a77cd0ad-d372-46d4-919e-01ad255737e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.75      0.75      0.75         4\n",
+      "           1       1.00      0.75      0.86         4\n",
+      "           3       0.80      1.00      0.89         4\n",
+      "\n",
+      "    accuracy                           0.83        12\n",
+      "   macro avg       0.85      0.83      0.83        12\n",
+      "weighted avg       0.85      0.83      0.83        12\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test,pipe.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "089e7e18-9a57-45b9-baeb-94f7aa47eed2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899d6dc0-b416-4d74-a9f2-b18ed0ce7b74",
+   "metadata": {},
+   "source": [
+    "# using GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ae9294ff-a133-499d-b393-4d46b3396a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_params = {\n",
+    "    'svm': {\n",
+    "        'model': svm.SVC(gamma='auto',probability=True),\n",
+    "        'params' : {\n",
+    "            'svc__C': [1,10,100,1000],\n",
+    "            'svc__kernel': ['rbf','linear']\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'params' : {\n",
+    "            'randomforestclassifier__n_estimators': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'logistic_regression' : {\n",
+    "        'model': LogisticRegression(solver='liblinear',multi_class='auto'),\n",
+    "        'params': {\n",
+    "            'logisticregression__C': [1,5,10]\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c8751b62-698a-4b24-ae79-f72692d6dae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best score</th>\n",
+       "      <th>best param</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>svm</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 model  best score  best param\n",
+       "0                  svm         NaN         NaN\n",
+       "1        random_forest         NaN         NaN\n",
+       "2  logistic_regression         NaN         NaN"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "best_estimator = {}\n",
+    "import pandas as pd\n",
+    "for algo, mp in model_params.items():\n",
+    "    pipe = make_pipeline(StandardScaler(), mp[\"model\"])\n",
+    "    clf = GridSearchCV(pipe, mp[\"params\"], cv=5, return_train_score=False)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    scores.append({\n",
+    "        \"model\":algo,\n",
+    "        \"best_score\":clf.best_score_,\n",
+    "        \"best_params\":clf.best_params_\n",
+    "    })\n",
+    "    best_estimator[algo] = clf.best_estimator_\n",
+    "\n",
+    "\n",
+    "# df = pd.DataFrame(scores, columns = [\"model\",\"best score\", \"best param\"])\n",
+    "# df\n"
+   ]
   }
  ],
  "metadata": {
