--- a/model/image_classification.ipynb
+++ b/model/image_classification.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x141f11be250>"
+       "<matplotlib.image.AxesImage at 0x12b4b442710>"
       ]
      },
      "execution_count": 3,
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x141f43a0050>"
+       "<matplotlib.image.AxesImage at 0x12b4b507050>"
       ]
      },
      "execution_count": 4,
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x141fe646950>"
+       "<matplotlib.image.AxesImage at 0x12b4b5bfc10>"
       ]
      },
      "execution_count": 5,
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x141fe900050>"
+       "<matplotlib.image.AxesImage at 0x12b5cb29210>"
       ]
      },
      "execution_count": 6,
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "934e4b81-d354-4e7b-8280-8856fb1ca34c",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "       [232]], dtype=uint8)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3e96ba65-16dd-45d8-8568-0d0866413129",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "(120, 4096)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d5735454-a16e-4c5b-9cd0-5ec5d18d5d74",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "19b950a4-1355-43e1-af8f-9c17c952b45a",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        "0.8333333333333334"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "a77cd0ad-d372-46d4-919e-01ad255737e6",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "089e7e18-9a57-45b9-baeb-94f7aa47eed2",
    "metadata": {},
    "outputs": [],
@@ -585,14 +585,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "ae9294ff-a133-499d-b393-4d46b3396a5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_params = {\n",
     "    'svm': {\n",
-    "        'model': svm.SVC(gamma='auto',probability=True),\n",
+    "        'model': SVC(gamma='auto',probability=True),\n",
     "        'params' : {\n",
     "            'svc__C': [1,10,100,1000],\n",
     "            'svc__kernel': ['rbf','linear']\n",
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "c8751b62-698a-4b24-ae79-f72692d6dae3",
    "metadata": {},
    "outputs": [
@@ -642,40 +642,45 @@
        "      <th></th>\n",
        "      <th>model</th>\n",
        "      <th>best score</th>\n",
-       "      <th>best param</th>\n",
+       "      <th>best params</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>svm</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.844156</td>\n",
+       "      <td>{'svc__C': 1, 'svc__kernel': 'linear'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.658009</td>\n",
+       "      <td>{'randomforestclassifier__n_estimators': 10}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>logistic_regression</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.824675</td>\n",
+       "      <td>{'logisticregression__C': 1}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 model  best score  best param\n",
-       "0                  svm         NaN         NaN\n",
-       "1        random_forest         NaN         NaN\n",
-       "2  logistic_regression         NaN         NaN"
+       "                 model  best score  \\\n",
+       "0                  svm    0.844156   \n",
+       "1        random_forest    0.658009   \n",
+       "2  logistic_regression    0.824675   \n",
+       "\n",
+       "                                    best params  \n",
+       "0        {'svc__C': 1, 'svc__kernel': 'linear'}  \n",
+       "1  {'randomforestclassifier__n_estimators': 10}  \n",
+       "2                  {'logisticregression__C': 1}  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,14 +695,283 @@
     "    clf.fit(X_train, y_train)\n",
     "    scores.append({\n",
     "        \"model\":algo,\n",
-    "        \"best_score\":clf.best_score_,\n",
-    "        \"best_params\":clf.best_params_\n",
+    "        \"best score\":clf.best_score_,\n",
+    "        \"best params\":clf.best_params_\n",
     "    })\n",
     "    best_estimator[algo] = clf.best_estimator_\n",
     "\n",
-    "\n",
-    "# df = pd.DataFrame(scores, columns = [\"model\",\"best score\", \"best param\"])\n",
-    "# df\n"
+    "df = pd.DataFrame(scores, columns = [\"model\",\"best score\", \"best params\"])\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "86ade3a4-20d5-40cb-8663-03ddb44e0590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'svm': Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                 ('svc',\n",
+       "                  SVC(C=1, gamma='auto', kernel='linear', probability=True))]),\n",
+       " 'random_forest': Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                 ('randomforestclassifier',\n",
+       "                  RandomForestClassifier(n_estimators=10))]),\n",
+       " 'logistic_regression': Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                 ('logisticregression',\n",
+       "                  LogisticRegression(C=1, solver='liblinear'))])}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "52f7e6eb-d858-4dcb-8412-1c44d440ba67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9166666666666666"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimator['svm'].score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "80ea29af-7cf7-4256-957d-819721bc53f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5833333333333334"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimator['random_forest'].score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ef059796-8192-4bda-af5d-112a5412f3cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9166666666666666"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimator[\"logistic_regression\"].score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8603be52-8744-4f5e-abd5-dbb735106982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[27,  0,  0,  0],\n",
+       "       [ 0, 19,  0,  0],\n",
+       "       [ 0,  0, 25,  0],\n",
+       "       [ 0,  0,  0, 37]], dtype=int64)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_train, best_estimator['svm'].predict(X_train))\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d978a135-b940-4cfe-a24f-14e524efae09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predicted 0</th>\n",
+       "      <th>predicted 1</th>\n",
+       "      <th>predicted 2</th>\n",
+       "      <th>predicted 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          predicted 0  predicted 1  predicted 2  predicted 3\n",
+       "Actual 0           27            0            0            0\n",
+       "Actual 1            0           19            0            0\n",
+       "Actual 2            0            0           25            0\n",
+       "Actual 3            0            0            0           37"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index =[]\n",
+    "columns = []\n",
+    "for i in range(4):\n",
+    "    index.append(\"Actual \"+ str(i))\n",
+    "    columns.append(\"predicted \"+str(i))\n",
+    "cm_df = pd.DataFrame(cm,index=index, columns=columns)\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8485156b-1762-41c4-a725-df69803912fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in c:\\users\\tasli\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.3.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['cele_face_recog_model.pkl']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!pip install joblib\n",
+    "import joblib\n",
+    "joblib.dump(best_estimator['svm'], \"cele_face_recog_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "551fa207-f020-4529-af6c-69d4ae1176f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lionel_messi': 0, 'roger_federer': 1, 'ronaldo': 2, 'virat_kohli': 3}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open(\"class_dictionary.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(class_dict))\n",
+    "class_dict"
    ]
   }
  ],
